# wasmtime_test

./: Cargo.toml  build_and_run.sh  test.c  test.wasm
src/: main.rs
